// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CutomButton loading snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#1976d2",
      "borderRadius": 5,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginVertical": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontSize": 16,
            "marginHorizontal": 5,
          },
          Object {
            "marginRight": -15,
          },
        ]
      }
    >
      test
    </Text>
  </View>
  <View
    style={
      Object {
        "width": 20,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
</View>
`;

exports[`CutomButton snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#1976d2",
      "borderRadius": 5,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginVertical": 10,
      "opacity": 1,
      "padding": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "marginHorizontal": 5,
      }
    }
  >
     
    test
     
  </Text>
</View>
`;
